@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 25-04-2006 fixed: enable/disable of subtitles with an id higher than 8 would always fails
+ - 25-04-2006 fixed: dvdplayer would restart when disabling/enabling substitles
  - 25-04-2006 changed: viz and karaoke is now separated.
  - 24-04-2006 fixed: paplayer can now play shoutcast mp3 streams
  - 24-04-2006 changed: content type is now available in the CFileItem, and thus available to players for codec selection
